# MediaCore

./: .gitignore  CMakeLists.txt  MediaCore.cpp
include/: AudioClip.h  AudioEffectFilter.h  AudioRender.h  AudioTrack.h  DebugHelper.h  FFUtils.h  FontManager.h  Logger.h  MediaCore.h  MediaEncoder.h  MediaInfo.h  MediaOverview.h  MediaParser.h  MediaReader.h  MultiTrackAudioReader.h  MultiTrackVideoReader.h  Overview.h  Snapshot.h  SnapshotGenerator.h  SubtitleClip.h  SubtitleStyle.h  SubtitleTrack.h  SysUtils.h  VideoBlender.h  VideoClip.h  VideoTrack.h  VideoTransformFilter.h
src/: AudioClip.cpp  AudioEffectFilter_FFImpl.cpp  AudioRender_Impl_Sdl2.cpp  AudioTrack.cpp  DebugHelper.cpp  FFUtils.cpp  FontDescriptor.cpp  FontManager_Fontconfig.cpp  Logger.cpp  MediaCore.cpp  MediaEncoder.cpp  MediaInfo.cpp  MediaOverview.cpp  MediaParser.cpp  MediaReader.cpp  MultiTrackAudioReader.cpp  MultiTrackVideoReader.cpp  Overview.cpp  Snapshot.cpp  SnapshotGenerator.cpp  SubtitleClip_AssImpl.cpp  SubtitleClip_AssImpl.h  SubtitleTrack.cpp  SubtitleTrack_AssImpl.cpp  SubtitleTrack_AssImpl.h  SysUtils.cpp  VideoBlender.cpp  VideoClip.cpp  VideoReader.cpp  VideoTrack.cpp  VideoTransformFilter.cpp  VideoTransformFilter_Base.h  VideoTransformFilter_FFImpl.cpp  VideoTransformFilter_FFImpl.h  VideoTransformFilter_VulkanImpl.cpp  VideoTransformFilter_VulkanImpl.h
test/: MediaEncoderTest.cpp  MediaOverviewTest.cpp  MediaReaderTest.cpp  MediaSnapshotTest.cpp  MultiTrackAudioReaderTest.cpp  MultiTrackVideoReaderTest.cpp  OverviewTest.cpp  SnapshotTest.cpp  SubtitleReaderTest.cpp
